keycloak-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /tmp/realm.json
          subPath: realm.json
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 30
      volumes:
      - name: config-volume
        configMap:
          name: keycloak-config
