keycloak-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
