keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: keycloak.lab.software.altkom.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 80
